<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/dialog_text_courseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name"

            />

        <EditText
            android:id="@+id/dialog_edit_courseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ex_cme3202_concepts_of_programming_languages"
            android:maxLines="1"
            android:textSize="12sp"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_text_coursePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_period"/>

        <EditText
            android:id="@+id/dialog_edit_coursePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ex_2019_2020_spring_semester"
            android:maxLines="1"
            android:textSize="12sp"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_text_courseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_code"/>

        <EditText
            android:id="@+id/dialog_edit_courseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ex_cme3202"
            android:maxLines="1"
            android:textSize="12sp"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>

</LinearLayout>