<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="10dp"
    tools:context=".login.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="CENG"
            android:textSize="40sp"
            android:textColor="@color/colorBlue"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Online"
            android:textSize="40sp"
            android:textColor="@color/colorRed"
            />

    </LinearLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_edit_person_name"
        android:hint="@string/name_and_surname"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_edit_email"
        android:hint="E-mail:"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_edit_password"
        android:hint="Password:"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        />

    <RadioGroup
        android:id="@+id/reg_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/reg_radio_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="20sp"
            android:onClick="checkButton"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" />

        <RadioButton
            android:id="@+id/reg_radio_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="20sp"
            android:onClick="checkButton"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:id="@+id/reg_btn_register"
        android:textColor="@android:color/white"
        android:background="@color/colorRed"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Have an account?"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/reg_txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Log in"
            android:textColor="@color/colorGreen"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>